feat: add IPv6 support
